--- a/index.html
+++ b/index.html
@@ -1,28 +1,213 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <mate charest="utf-8" />
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Chuanyang Zheng's homepage.">
+    <meta name="keywords" content="Chuanyang Zheng,  HKBU, Multi-View,Re-ID,GAN">
+    <meta name="author" content="Chuanyang Zheng">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Chuanyang Zheng-HKBU</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Material+Icons|Roboto:regular,italic,light,bold">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css">
+    <link rel="stylesheet" href="assets/css/material.grey-pink.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
-                <a class="nav-item nav-link" href="#">Pricing</a>
-                <a class="nav-item nav-link disabled" href="#">Disabled</a>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <header class="mdl-layout__header mdl-layout__header--scroll portfolio-header">
+            <div class="mdl-layout__header-row portfolio-logo-row">
+                <span class="mdl-layout__title">
+                    <span class="mdl-layout__title">Chuanyang Zheng
+                        <small>郑传阳</small>
+                    </span>
+                    <span class="mdl-layout__subtitle">HKBU email:17251311@life.hkbu.edu.hk</span>
+                </span>
             </div>
+            <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
+                <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                    <a class="mdl-navigation__link" href="#home">Home</a>
+                    <a class="mdl-navigation__link" href="#education">Education</a>
+                    <a class="mdl-navigation__link" href="#research">Contacts</a>
+                    <a class="mdl-navigation__link" href="#news">News</a>
+                    <a class="mdl-navigation__link" href="#publication">Publication</a>
+                    <a class="mdl-navigation__link" href="#award">Activities</a>
+
+                </nav>
+            </div>
+        </header>
+        <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+            <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                <a class="mdl-navigation__link" href="#home">Home</a>
+                <a class="mdl-navigation__link" href="#education">Education</a>
+                <a class="mdl-navigation__link" href="#research">Contacts</a>
+                <a class="mdl-navigation__link" href="#news">News</a>
+                <a class="mdl-navigation__link" href="#publication">Publication</a>
+                <a class="mdl-navigation__link" href="#award">Activities</a>
+            </nav>
         </div>
-    </nav>
-    <h1>Hello world!</h1>
+        <main class="mdl-layout__content">
+            <div id="home" class="mdl-grid portfolio-max-width">
+
+                <div id="about" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">About</h2>
+                    </div>
+                    <div class="mdl-grid mdl-cell--12-col">
+                        <div class="mdl-card__media mdl-cell mdl-cell--12-col-tablet">
+                            <img class="article-image" src="/images/Chuanyang-Zheng.jpg" border="0" alt="">
+                        </div>
+                        <div class="mdl-cell mdl-cell--8-col">
+                            <div class="mdl-card__supporting-text no-left-padding">
+                                <p>Chuanyang Zheng is a Year 3 undergraduate in Hong Kong Baptist University. Now his
+                                    works with Professor
+                                    <a href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
+                                        Lan</a> and
+                                    <a href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi
+                                        Yuen</a> at <a href="http://mmlab.ie.cuhk.edu.hk/">Pattern Recognition and
+                                        Machine Learning Laboratory</a>.
+                                    <br>
+                                    His research interests include computer vision and deep learning,
+                                    particularly
+                                    focusing on Multi-View and Convolutional Neural Network.</p>
+                                <span style="font-size:16px">
+                                    <a href="/Chuanyang-Zheng/pdf" target="_blank">
+                                        <i class="fas fa-download"></i> CV</a>&nbsp;&nbsp;&nbsp;
+                                    <a href="https://scholar.google.com/citations?user=NkyvjEYAAAAJ&hl=zh-TW"
+                                        target="_blank">
+                                        <i style="font-size:18px" class="ai ai-google-scholar"></i> Google
+                                        Scholar</a>&nbsp;&nbsp;&nbsp;
+                                    <a href="https://github.com/chuanyang-Zheng" target="_blank">
+                                        <i class="fab fa-github"></i> Github</a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="education" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Education</h2>
+                    </div>
+                    <div class="mdl-grid mdl-cell--12-col mdl-card">
+                        <div class="mdl-grid mdl-cell--6-col">
+                            <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+                                <img class="article-image" src="/images/HKBU" border="0" alt="">
+                            </div>
+                            <div class="mdl-cell mdl-cell--8-col">
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2017 - 2021(expected)
+                                </h2>
+                                <div class="mdl-card__supporting-text">
+                                    B.SC in Computer Science
+                                    <br> Hong Kong Baptist University
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="research" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Research</h2>
+                    </div>
+                    <div class="mdl-grid mdl-cell--12-col mdl-card">
+                        <div class="mdl-grid mdl-cell--6-col">
+                            <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+                                <img class="article-image" src="assets/images/fb_logo.png" border="0" alt="">
+                            </div>
+                            <div class="mdl-cell mdl-cell--8-col">
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.05 - 2019.09</h2>
+                                <div class="mdl-card__supporting-text">
+                                    Student Research Assistant
+                                    <br> Work with <a href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi Yuen</a>    <a href="https://www.comp.hkbu.edu.hk/~mangye/">Mang Ye</a>
+                                    
+                                    <br> Pattern Recognition and Machine Learning Laboratory at HKBU
+                                    <br><a href="/research/2019SummerReport.pdf">Summer Research Report</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mdl-grid mdl-cell--6-col">
+                        </div>
+                    </div>
+                </div>
+
+                <div id="news" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">News</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text" style="width:100%">
+                        <ul class="mdl-list">
+                            <li class="mdl-list__item news-text">
+                                <span class="mdl-list__item-primary-content">
+                                    <i class="fas fa-bullhorn"></i>
+                                    &nbsp;Work with Professor <a
+                                        href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
+                                        Lan</a> in Multi-View &nbsp;
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id="publication" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Publication</h2>
+                    </div>
+
+                    <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card">
+                        <div class="mdl-cell mdl-cell--3-col mdl-cell--12-col-tablet">
+                            <img class="article-image" src="assets/images/mmdetection.png" border="0" alt="">
+                        </div>
+                        <div class="mdl-cell mdl-cell--9-col">
+                            <h2 class="mdl-card__title-text paper-title">Group Key Agreement Protocol Based on Privacy
+                                Protection and Attribute Authentication
+                            </h2>
+                            <div class="mdl-card__supporting-text no-left-padding paper-info">
+                                <p>
+                                    Zhang Qikun, Li Yongjiao, Gan Yong, <b>Zheng Chuanyang</b>, Luo Xiangyang, Zheng Jun
+                                    <br>
+                                    <i>IEEE Access,2019/7/2</i>
+                                </p>
+                                <span>[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8753618">PDF</a>]
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div id="award" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                    <ul>
+                        <li>Outstanding Student Scholarship 2018-2019</li>
+                        <li>Summer Research Scholarship 2019</li>
+                        <li>Nominated to Visit McGill University (top 1%,100K HKD) 2019</li>
+                        <li>Undergraduate Scholarship in Computer Science 2019-2020</li>
+                        <li>President's Honour Roll 2017 semester 2-Now </li>
+                        <li>Dean’s List 2017 semester 1 </li>
+                    </ul>
+                </div>
+
+
+            </div>
+        </main>
+    </div>
+    <script src="assets/js/material.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120922587-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-120922587-1');
+    </script>
+
 </body>
 
 </html>
