--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         href="https://fonts.googleapis.com/css?family=Material+Icons|Roboto:regular,italic,light,bold">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css">
-    <link rel="stylesheet" href="assets/css/material.grey-pink.min.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="layout/material.grey-pink.min.css" />
+    <link rel="stylesheet" href="layout/styles.css" />
 </head>
 
 <body>
