--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                     <a class="mdl-navigation__link" href="#home">Home</a>
                     <a class="mdl-navigation__link" href="#education">Education</a>
-                    <a class="mdl-navigation__link" href="#research">Contacts</a>
+                    <a class="mdl-navigation__link" href="#research">Research</a>
                     <a class="mdl-navigation__link" href="#news">News</a>
                     <a class="mdl-navigation__link" href="#publication">Publication</a>
                     <a class="mdl-navigation__link" href="#award">Activities</a>
@@ -44,7 +44,7 @@
             <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
                 <a class="mdl-navigation__link" href="#home">Home</a>
                 <a class="mdl-navigation__link" href="#education">Education</a>
-                <a class="mdl-navigation__link" href="#research">Contacts</a>
+                <a class="mdl-navigation__link" href="#research">Research</a>
                 <a class="mdl-navigation__link" href="#news">News</a>
                 <a class="mdl-navigation__link" href="#publication">Publication</a>
                 <a class="mdl-navigation__link" href="#award">Activities</a>
@@ -123,8 +123,10 @@
                                 <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.05 - 2019.09</h2>
                                 <div class="mdl-card__supporting-text">
                                     Student Research Assistant
-                                    <br> Work with <a href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi Yuen</a>    <a href="https://www.comp.hkbu.edu.hk/~mangye/">Mang Ye</a>
-                                    
+                                    <br> Work with <a
+                                        href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi
+                                        Yuen</a> <a href="https://www.comp.hkbu.edu.hk/~mangye/">Mang Ye</a>
+
                                     <br> Pattern Recognition and Machine Learning Laboratory at HKBU
                                     <br><a href="/research/2019SummerReport.pdf">Summer Research Report</a>
                                 </div>
