--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="mdl-grid mdl-cell--6-col">
+                    </div>
                 </div>
-                
+
 
                 <div id="research" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
                     <div class="mdl-card__title">
