--- a/index.html
+++ b/index.html
@@ -93,23 +93,26 @@
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">Education</h2>
                     </div>
-                    
-                    <div class="mdl-grid mdl-cell--6-col">
-                        <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
-                            <img class="article-image"
-                                src="https://www.hkbu.edu.hk/eng/images/logo.png" border="0"
-                                alt="">
-                        </div>
-                        <div class="mdl-cell mdl-cell--8-col">
-                            <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2017 - 2021(expected)
-                            </h2>
-                            <div class="mdl-card__supporting-text">
-                                B.SC in Computer Science
-                                <br> Hong Kong Baptist University
+                    <div class="mdl-grid mdl-cell--12-col mdl-card">
+                        <div class="mdl-grid mdl-cell--6-col">
+                            <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+                                <img class="article-image"
+                                    src="https://www.hkbu.edu.hk/eng/images/logo.png" border="0"
+                                    alt="">
+                            </div>
+                            <div class="mdl-cell mdl-cell--8-col">
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2017 - 2021(expected)
+                                </h2>
+                                <div class="mdl-card__supporting-text">
+                                    B.SC in Computer Science
+                                    <br> Hong Kong Baptist University
+                                </div>
                             </div>
                         </div>
+
+                        <div class="mdl-grid mdl-cell--6-col">
+                        </div>
                     </div>
-                    
                 </div>
 
 
@@ -128,9 +131,9 @@
                                 <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.05 - 2019.09</h2>
                                 <div class="mdl-card__supporting-text">
                                     Student Research Assistant
-                                    <br> Work with <a
+                                    <br> Work with Professor <a
                                         href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi
-                                        Yuen</a> <a href="https://www.comp.hkbu.edu.hk/~mangye/">Mang Ye</a>
+                                        Yuen</a> and <a href="https://www.comp.hkbu.edu.hk/~mangye/">Mang Ye</a>
 
                                     <br> Pattern Recognition and Machine Learning Laboratory at HKBU
                                     <br><a href="/research/2019SummerReport.pdf">Summer Research Report</a>
