--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
                     <div class="mdl-grid mdl-cell--12-col mdl-card">
                         <div class="mdl-grid mdl-cell--6-col">
                             <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
-                                <img class="article-image"
-                                    src="https://www.hkbu.edu.hk/eng/images/logo.png" border="0"
+                                <img class="article-image" src="https://www.hkbu.edu.hk/eng/images/logo.png" border="0"
                                     alt="">
                             </div>
                             <div class="mdl-cell mdl-cell--8-col">
@@ -121,7 +120,7 @@
                         <h2 class="mdl-card__title-text">Research</h2>
                     </div>
                     <div class="mdl-grid mdl-cell--12-col mdl-card">
-                        <div class="mdl-grid mdl-cell--6-col">
+                        <div class="mdl-grid mdl-cell--12-col">
                             <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
                                 <img class="article-image"
                                     src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/22780485_1112128878922896_5406807417161841095_n.png?_nc_cat=106&_nc_ohc=356DiI2u3QoAQnN3gvMCUjZ6fUeaMf6WausSJOyc-poZAtjRnheLo8yVg&_nc_ht=scontent-sjc3-1.xx&oh=151e3aa12eba5562abcb5acfbbd9c495&oe=5E998ADE"
@@ -131,16 +130,15 @@
                                 <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.05 - 2019.09</h2>
                                 <div class="mdl-card__supporting-text">
                                     Student Research Assistant
-                                    <br> Work with Professor <a
+                                    <br> Work with <a href="https://www.comp.hkbu.edu.hk/~mangye/">Mang Ye</a> and
+                                    Professor <a
                                         href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi
-                                        Yuen</a> and <a href="https://www.comp.hkbu.edu.hk/~mangye/">Mang Ye</a>
+                                        Yuen</a>
 
                                     <br> Pattern Recognition and Machine Learning Laboratory at HKBU
                                     <br><a href="/research/2019SummerReport.pdf">Summer Research Report</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="mdl-grid mdl-cell--6-col">
                         </div>
                     </div>
                 </div>
