--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!-- Note: The templete of the page comes from http://chenkai.site/. -->
+<!-- Note: The templete of the page comes from http://chenkai.site/. -->
+<!-- Note: The templete of the page comes from http://chenkai.site/. -->
+<!-- Note: The templete of the page comes from http://chenkai.site/. -->
+<!-- Note: The templete of the page comes from http://chenkai.site/. -->
+<!-- Note: The templete of the page comes from http://chenkai.site/. -->
+
+<!-- Note: If you want use the templete, you can go to https://github.com/chuanyang-Zheng/chuanyang-Zheng.github.io, as the ChenKai does not provide original code-->
+
+
 <!doctype html>
 <html lang="en">
 
@@ -136,7 +146,7 @@
 
                                     <br> Pattern Recognition and Machine Learning Laboratory at HKBU
                                     <br>Baseline:46.8%        Ours:66.78% 
-                                    <br><a href="/research/2019SummerReport.pdf">[Summer Research Report]</a>
+                                    <br><a href="/research/Chuanyang-Zheng-2019-Summer Research Report.pdf">[Summer Research Report]</a>
                                 </div>
                             </div>
                         </div>
@@ -152,9 +162,9 @@
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    &nbsp;Work with Professor <a
+                                    &nbsp;Work with Professor  <a
                                         href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
-                                        Lan</a> in Multi-View &nbsp;
+                                        Lan</a>  in Multi-View &nbsp;
                                 </span>
                             </li>
                         </ul>
