--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     particularly
                                     focusing on Multi-View and Convolutional Neural Network.</p>
                                 <span style="font-size:16px">
-                                    <a href="/Chuanyang-Zheng_HKBU_CV.pdf" target="_blank">
+                                    <a href="Chuanyang-Zheng_HKBU_CV.pdf" target="_blank">
                                         <i class="fas fa-download"></i> CV</a>&nbsp;&nbsp;&nbsp;
                                     <a href="https://scholar.google.com/citations?user=NkyvjEYAAAAJ&hl=zh-TW"
                                         target="_blank">
