--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    &nbsp;Work with Professor  <a
+                                    &nbsp;Work with Professor &nbsp;  <a
                                         href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
-                                        Lan</a>  in Multi-View &nbsp;
+                                        Lan</a> &nbsp;  in Multi-View &nbsp;
                                 </span>
                             </li>
                         </ul>
