--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <ul>
                         <li>Outstanding Student Scholarship 2018-2019</li>
                         <li>Summer Research Scholarship 2019</li>
-                        <li>Nominated to Visit McGill University (top 1%,100K HKD) 2019</li>
+                        <li>Nominated to Visit McGill University <b> (top 1%,100K HKD)</b>b 2019</li>
                         <li>Undergraduate Scholarship in Computer Science 2019-2020</li>
                         <li>President's Honour Roll 2017 semester 2-Now </li>
                         <li>Dean’s List 2017 semester 1 </li>
