--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Note: The templete of the page comes from http://chenkai.site/. -->
 <!-- Note: The templete of the page comes from http://chenkai.site/. -->
 
-<!-- Note: If you want use the templete, you can go to https://github.com/chuanyang-Zheng/chuanyang-Zheng.github.io, as the ChenKai does not provide original code-->
+<!-- Note: If you want use the templete, you can go to https://github.com/chuanyang-Zheng/chuanyang-Zheng.github.io, as the ChenKai does not provide source code-->
 
 
 <!doctype html>
