--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="mdl-cell mdl-cell--8-col">
                             <div class="mdl-card__supporting-text no-left-padding">
-                                <p>Chuanyang Zheng is a Year 3 undergraduate in Hong Kong Baptist University. Now his
+                                <p>Chuanyang Zheng is a Year 3 undergraduate in Hong Kong Baptist University. Now he
                                     works with Professor
                                     <a href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
                                         Lan</a> and
