--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         href="https://fonts.googleapis.com/css?family=Material+Icons|Roboto:regular,italic,light,bold">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-red.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-blue.min.css" /> 
     <link rel="stylesheet" href="layout/styles.css" />
 </head>
 
