--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="mdl-grid mdl-cell--12-col mdl-card">
                         <div class="mdl-grid mdl-cell--12-col">
                             <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
-                                <img class="article-image" src="https://www.hkbu.edu.hk/eng/images/logo.png" border="0"
+                                <img class="article-image" src="/images/HKBU-logo.png" border="0"
                                     alt="">
                             </div>
                             <div class="mdl-cell mdl-cell--8-col">
