--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
                     <div class="mdl-grid mdl-cell--12-col mdl-card">
                         <div class="mdl-grid mdl-cell--12-col">
                             <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
-                                <img class="article-image" src="https://www.hkbu.edu.hk/eng/images/logo.png" border="0"
-                                    alt="">
+                                <img class="article-image"
+                                    src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/22780485_1112128878922896_5406807417161841095_n.png?_nc_cat=106&_nc_ohc=356DiI2u3QoAQnN3gvMCUjZ6fUeaMf6WausSJOyc-poZAtjRnheLo8yVg&_nc_ht=scontent-sjc3-1.xx&oh=151e3aa12eba5562abcb5acfbbd9c495&oe=5E998ADE"
+                                    border="0" alt="">
                             </div>
                             <div class="mdl-cell mdl-cell--8-col">
                                 <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2017 - 2021(expected)
