--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             <div class="mdl-card__supporting-text no-left-padding paper-info">
                                 <p>
                                     <!-- author name. You can use <b>Zheng</b> to highlit the name -->
-                                    Zhang Qikun, Li Yongjiao, Gan Yong, <b>Zheng Chuanyang</b>>, Luo Xiangyang, Zheng Jun
+                                    Zhang Qikun, Li Yongjiao, Gan Yong, <b>Zheng Chuanyang</b>, Luo Xiangyang, Zheng Jun
                                     <br>
                                     <i>IEEE Access,2019/7/2</i>
                                 </p>
