Add COMP4105 Report

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                     particularly
                                     focusing on Multi-View and Convolutional Neural Network.</p>
                                 <span style="font-size:16px">
-                                    
+
                                     <!-- just change the corresponding herf value -->
 
                                     <!-- CV part. &nbsp; means we add a space. It is equal to press "Space key" on your keyboard -->
@@ -198,6 +198,28 @@
                             </div>
                         </div>
                         <!-- first research experience finishes -->
+
+                        <!-- second research experience begins -->
+                        <div class="mdl-grid mdl-cell--12-col">
+                            <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+
+                                <!-- logo for research Laboratory -->
+                                <img class="article-image"
+                                    src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/22780485_1112128878922896_5406807417161841095_n.png?_nc_cat=106&_nc_ohc=356DiI2u3QoAQnN3gvMCUjZ6fUeaMf6WausSJOyc-poZAtjRnheLo8yVg&_nc_ht=scontent-sjc3-1.xx&oh=151e3aa12eba5562abcb5acfbbd9c495&oe=5E998ADE"
+                                    border="0" alt="">
+                            </div>
+
+                            <div class="mdl-cell mdl-cell--8-col">
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.10 - 2019.12</h2>
+                                <div class="mdl-card__supporting-text">
+                                    COMP4015 Course Report
+                                    <br>
+                                    Work on CycleGAN
+                                    <br><a href="/research/Project_COMP4015_Final.pdf">[Course Report]</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- second research experience finishes -->
 
                         <!-- if you need to add another research experience, just copy the first experience description and change the corresponding value -->
 
