Change Research Part Image

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                                 <!-- logo for research Laboratory -->
                                 <img class="article-image"
-                                    src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/22780485_1112128878922896_5406807417161841095_n.png?_nc_cat=106&_nc_ohc=356DiI2u3QoAQnN3gvMCUjZ6fUeaMf6WausSJOyc-poZAtjRnheLo8yVg&_nc_ht=scontent-sjc3-1.xx&oh=151e3aa12eba5562abcb5acfbbd9c495&oe=5E998ADE"
+                                    src="https://www.comp.hkbu.edu.hk/v1/images/winter/home_01.png"
                                     border="0" alt="">
                             </div>
                             
@@ -205,7 +205,7 @@
 
                                 <!-- logo for research Laboratory -->
                                 <img class="article-image"
-                                    src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/22780485_1112128878922896_5406807417161841095_n.png?_nc_cat=106&_nc_ohc=356DiI2u3QoAQnN3gvMCUjZ6fUeaMf6WausSJOyc-poZAtjRnheLo8yVg&_nc_ht=scontent-sjc3-1.xx&oh=151e3aa12eba5562abcb5acfbbd9c495&oe=5E998ADE"
+                                    src="https://www.comp.hkbu.edu.hk/v1/images/winter/home_01.png"
                                     border="0" alt="">
                             </div>
 
