--- a/index.html
+++ b/index.html
@@ -212,14 +212,36 @@
                             <div class="mdl-cell mdl-cell--8-col">
                                 <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.10 - 2019.12</h2>
                                 <div class="mdl-card__supporting-text">
-                                    COMP4015 Course Report
+                                    COMP4015 Artificial Intelligence And Machine Learning Course Report
                                     <br>
-                                    Work on CycleGAN
-                                    <br><a href="/research/Project_COMP4015_Final.pdf">[Course Report]</a>
+                                    –	CycleGAN only cycles once. According to Squeeze Theorem, we add additional cycles by regards cycle-consistent images as real images. There are two advantages compared to the original CycleGAN.  First, according to Squeeze Theorem, the cycle-consistent should be much closer to the original real images. Second, we can get more images as input because we regard cycle-consistent images as real images
+                                    <br><a href="/research/Project_COMP4015_Final.pdf">[Report]</a>
                                 </div>
                             </div>
                         </div>
                         <!-- second research experience finishes -->
+
+                        <!-- Third research experience begins -->
+                        <div class="mdl-grid mdl-cell--12-col">
+                            <div class="mdl-card__media mdl-cell--4-col mdl-cell--12-col-tablet">
+
+                                <!-- logo for research Laboratory -->
+                                <img class="article-image"
+                                     src="https://www.comp.hkbu.edu.hk/v1/images/winter/home_01.png"
+                                     border="0" alt="">
+                            </div>
+
+                            <div class="mdl-cell mdl-cell--8-col">
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.10 - 2019.12</h2>
+                                <div class="mdl-card__supporting-text">
+                                    COMP4055 Medical Images and Its Applications Course Report
+                                    <br>
+                                    –	Two Improvement. First(Preprocess), outside the liver,  CT images have a lot of useless pixels in which the pixel value is 0. We use a simple traditional algorithm to find the liver in an image before giving it to Faster R-CNN. Second(New FPN), we add ResNet and DenseNet idea to Feature Pyramid Network
+                                    <br><a href="/research/COMP4055_Group_Project_Proposal_Student17251311.pdf">[Report]</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Third research experience finishes -->
 
                         <!-- if you need to add another research experience, just copy the first experience description and change the corresponding value -->
 
@@ -297,14 +319,11 @@
                         <h2 class="mdl-card__title-text">Award</h2>
                     </div>
                     <ul>
-                        <!-- first award begins -->
-                        <li>Outstanding Student Scholarship 2018-2019</li>
-                        <!-- first award finishes -->
-
-
+                        <li>C.V. Starr Scholarship 2020</li>
+                        <li>Outstanding Student Scholarship 2019</li>
                         <li>Summer Research Scholarship 2019</li>
                         <li>Nominated to Visit McGill University <b> (top 1%,100K HKD)</b> 2019</li>
-                        <li>Undergraduate Scholarship in Computer Science 2019-2020</li>
+                        <li>Undergraduate Scholarship in Computer Science 2018</li>
                         <li>President's Honour Roll 2017 semester 2-Now </li>
                         <li>Dean’s List 2017 semester 1 </li>
                     </ul>
