--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             </div>
 
                             <div class="mdl-cell mdl-cell--8-col">
-                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2019.10 - 2019.12</h2>
+                                <h2 class="mdl-card__title-text paper-title">&nbsp;&nbsp;&nbsp;2020.1 - Now</h2>
                                 <div class="mdl-card__supporting-text">
                                     COMP4055 Medical Images and Its Applications Course Report
                                     <br>
