--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
                     <div class="mdl-card__title">
                         <h2 class="mdl-card__title-text">News</h2>
                     </div>
+
+
                     <div class="mdl-card__supporting-text" style="width:100%">
                         <ul class="mdl-list">
 
@@ -262,9 +264,16 @@
                             <li class="mdl-list__item news-text">
                                 <span class="mdl-list__item-primary-content">
                                     <i class="fas fa-bullhorn"></i>
-                                    &nbsp;Work with Professor &nbsp;  <a
+                                    &nbsp;(December 2019) Work with Professor &nbsp;  <a
                                         href="https://scholar.google.com/citations?user=c3iwWRcAAAAJ&hl=en">Xiangyuan
                                         Lan</a> &nbsp;  in Multi-View &nbsp;
+                                </span>
+                            </li>
+
+                            <li class="mdl-list__item news-text">
+                                <span class="mdl-list__item-primary-content">
+                                    <i class="fas fa-bullhorn"></i>
+                                    &nbsp;(15 October, 2019) Participate in Sensetime Technology Day.
                                 </span>
                             </li>
                             <!-- first news finishes -->
