--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
                         <h2 class="mdl-card__title-text">Award</h2>
                     </div>
                     <ul>
+                        <li>Summer Research Scholarship 2020</li>
                         <li>C.V. Starr Scholarship 2020</li>
                         <li>Outstanding Student Scholarship 2019</li>
                         <li>Summer Research Scholarship 2019</li>
