--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                     COMP4055 Medical Images and Its Applications Course Report
                                     <br>
                                     –	Two Improvement. First(Preprocess), outside the liver,  CT images have a lot of useless pixels in which the pixel value is 0. We use a simple traditional algorithm to find the liver in an image before giving it to Faster R-CNN. Second(New FPN), we add ResNet and DenseNet idea to Feature Pyramid Network
-                                    <br><a href="/research/COMP4055_Group_Project_Proposal_Student17251311.pdf">[Initial Proposal]</a> <a href="/research/COMP4055_Group_Project_Report.pdf">[Final Report]</a>
+                                    <br><a href="/research/COMP4055_Group_Project_Proposal_Student17251311.pdf">[Initial Proposal]</a> <a href="/research/COMP4055_Group_Project_Report.pdf">[Final Report]</a> <a href="https://github.com/chuanyang-Zheng/COMP4055">[Code]</a>
                                 </div>
                             </div>
                         </div>
