--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                                     <a href="https://scholar.google.com/citations?user=CwhIcHkAAAAJ&hl=en">Pong Chi
                                         Yuen</a> at Pattern Recognition and Machine Learning Laboratory.
                                     <br>
-                                    His research interests include computer vision and deep learning,
+                                    His research interests include computer vision, data mining and security,
                                     particularly
-                                    focusing on Multi-View and Convolutional Neural Network.</p>
+                                    focusing object detection.</p>
                                 <span style="font-size:16px">
 
                                     <!-- just change the corresponding herf value -->
