--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     <br>
                                     His research interests include computer vision, data mining and security,
                                     particularly
-                                    focusing object detection.</p>
+                                    focusing object detection.(Last Update: 30 May, 2020)</p>
                                 <span style="font-size:16px">
 
                                     <!-- just change the corresponding herf value -->
